--- a/pom.xml
+++ b/pom.xml
@@ -26,5 +26,20 @@
         <artifactId>slf4j-simple</artifactId>
         <version>1.7.26</version>
     </dependency>
+    <dependency>
+        <groupId>org.mongodb</groupId>
+        <artifactId>mongodb-driver-core</artifactId>
+        <version>4.10.2</version>
+    </dependency>
+    <dependency>
+        <groupId>org.mongodb</groupId>
+        <artifactId>mongodb-driver-sync</artifactId>
+        <version>4.10.2</version>
+    </dependency>
+    <dependency>
+        <groupId>org.mongodb</groupId>
+        <artifactId>mongo-java-driver</artifactId>
+        <version>3.12.14</version>
+    </dependency>
 </dependencies>
 </project>
